--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,22 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  background-color: #c594db41;
+  background: linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
+    linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
+    linear-gradient(315deg, black 25%, transparent 25%),
+    linear-gradient(45deg, black 25%, transparent 25%);
+  background-size: 2em 2em;
+  background-color: #232323;
 }
 .search-grid {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
+  justify-items: center;
 }
 
 .search {
   grid-column: 2/3;
+  width: 180px;
 }
 
 .radio-buttons {
@@ -28,18 +35,19 @@
 
 .results-grid {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 15px;
 }
 
 .results {
   display: grid;
   grid-template-columns: 1fr;
-  grid-column: 2;
-  color: lightskyblue;
+  margin-left: 70px;
+  margin-right: 70px;
+  color: white;
   border: solid;
   border-radius: 12px;
-  border-color: purple;
+  border-color: slategray;
   text-align: center;
 }
 
@@ -68,10 +76,189 @@
 .more {
   margin-top: 15px;
   justify-self: center;
-  background-color: purple;
+  background-color: white;
 
   border: solid;
   border-radius: 12px;
   border-width: 0px;
   text-align: center;
+}
+
+.artist-image {
+  width: 100px;
+  height: 100px;
+  border: solid;
+  border-radius: 12px;
+  border-width: 0px;
+  justify-self: center;
+}
+
+@media (min-width: 760px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    background: linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
+      linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
+      linear-gradient(315deg, black 25%, transparent 25%),
+      linear-gradient(45deg, black 25%, transparent 25%);
+    background-size: 2em 2em;
+    background-color: #232323;
+  }
+  .search-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+
+  .search {
+    grid-column: 2/3;
+  }
+
+  .radio-buttons {
+    color: white;
+  }
+  .result-string-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    color: white;
+  }
+  .result-string {
+    grid-column: 2/3;
+    font-size: 12px;
+  }
+
+  .results-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px;
+  }
+
+  .results {
+    display: grid;
+    grid-template-columns: 1fr;
+    color: white;
+    border: solid;
+    border-radius: 12px;
+    border-color: slategray;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .result-image {
+    width: 100px;
+    border: solid;
+    border-radius: 12px;
+    border-width: 0px;
+    justify-self: center;
+  }
+
+  .details-grid {
+    display: grid;
+    grid-template-rows: 1fr;
+  }
+
+  .details {
+    display: none;
+  }
+
+  .details--display {
+    display: block;
+    color: white;
+  }
+
+  .more {
+    margin-top: 15px;
+    justify-self: center;
+    background-color: white;
+
+    border: solid;
+    border-radius: 12px;
+    border-width: 0px;
+    text-align: center;
+  }
+}
+
+@media (min-width: 1100px) {
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    background: linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
+      linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
+      linear-gradient(315deg, black 25%, transparent 25%),
+      linear-gradient(45deg, black 25%, transparent 25%);
+    background-size: 2em 2em;
+    background-color: #232323;
+  }
+  .search-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+
+  .search {
+    grid-column: 2/3;
+  }
+
+  .radio-buttons {
+    color: white;
+  }
+  .result-string-grid {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    color: white;
+  }
+  .result-string {
+    grid-column: 2/3;
+    font-size: 12px;
+  }
+
+  .results-grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-gap: 15px;
+  }
+
+  .results {
+    display: grid;
+    grid-template-columns: 1fr;
+    color: white;
+    border: solid;
+    border-radius: 12px;
+    border-color: slategray;
+    text-align: center;
+  }
+
+  .result-image {
+    width: 100px;
+    border: solid;
+    border-radius: 12px;
+    border-width: 0px;
+    justify-self: center;
+  }
+
+  .details-grid {
+    display: grid;
+    grid-template-rows: 1fr;
+  }
+
+  .details {
+    display: none;
+  }
+
+  .details--display {
+    display: block;
+    color: white;
+  }
+
+  .more {
+    margin-top: 15px;
+    justify-self: center;
+    background-color: white;
+
+    border: solid;
+    border-radius: 12px;
+    border-width: 0px;
+    text-align: center;
+  }
 }
