--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,58 @@
     linear-gradient(45deg, black 25%, transparent 25%);
   background-size: 2em 2em;
   background-color: #232323;
+  font-family: "Volkhov", serif;
 }
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:visited {
+  color: lightgray;
+}
+
+a:hover {
+  color: hotpink;
+}
+
+.navbar {
+  color: white;
+  text-align: center;
+  margin-bottom: 10px;
+  font-family: "Monoton", cursive;
+  font-size: 28px;
+}
+
 .search-grid {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   justify-items: center;
 }
 
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
 .search {
   grid-column: 2/3;
   width: 180px;
+  font-size: 12px;
 }
 
 .radio-buttons {
@@ -36,7 +78,7 @@
 .results-grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 15px;
+  grid-gap: 30px;
 }
 
 .results {
@@ -68,6 +110,13 @@
   display: none;
 }
 
+.music-video {
+  border: solid;
+  border-width: 0;
+  border-radius: 12px;
+  justify-self: center;
+}
+
 .details--display {
   display: block;
   color: white;
@@ -76,11 +125,7 @@
 .more {
   margin-top: 15px;
   justify-self: center;
-  background-color: white;
 
-  border: solid;
-  border-radius: 12px;
-  border-width: 0px;
   text-align: center;
 }
 
@@ -91,174 +136,4 @@
   border-radius: 12px;
   border-width: 0px;
   justify-self: center;
-}
-
-@media (min-width: 760px) {
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    background: linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
-      linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
-      linear-gradient(315deg, black 25%, transparent 25%),
-      linear-gradient(45deg, black 25%, transparent 25%);
-    background-size: 2em 2em;
-    background-color: #232323;
-  }
-  .search-grid {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-  }
-
-  .search {
-    grid-column: 2/3;
-  }
-
-  .radio-buttons {
-    color: white;
-  }
-  .result-string-grid {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    color: white;
-  }
-  .result-string {
-    grid-column: 2/3;
-    font-size: 12px;
-  }
-
-  .results-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 15px;
-  }
-
-  .results {
-    display: grid;
-    grid-template-columns: 1fr;
-    color: white;
-    border: solid;
-    border-radius: 12px;
-    border-color: slategray;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  .result-image {
-    width: 100px;
-    border: solid;
-    border-radius: 12px;
-    border-width: 0px;
-    justify-self: center;
-  }
-
-  .details-grid {
-    display: grid;
-    grid-template-rows: 1fr;
-  }
-
-  .details {
-    display: none;
-  }
-
-  .details--display {
-    display: block;
-    color: white;
-  }
-
-  .more {
-    margin-top: 15px;
-    justify-self: center;
-    background-color: white;
-
-    border: solid;
-    border-radius: 12px;
-    border-width: 0px;
-    text-align: center;
-  }
-}
-
-@media (min-width: 1100px) {
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    background: linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
-      linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
-      linear-gradient(315deg, black 25%, transparent 25%),
-      linear-gradient(45deg, black 25%, transparent 25%);
-    background-size: 2em 2em;
-    background-color: #232323;
-  }
-  .search-grid {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-  }
-
-  .search {
-    grid-column: 2/3;
-  }
-
-  .radio-buttons {
-    color: white;
-  }
-  .result-string-grid {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    color: white;
-  }
-  .result-string {
-    grid-column: 2/3;
-    font-size: 12px;
-  }
-
-  .results-grid {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-gap: 15px;
-  }
-
-  .results {
-    display: grid;
-    grid-template-columns: 1fr;
-    color: white;
-    border: solid;
-    border-radius: 12px;
-    border-color: slategray;
-    text-align: center;
-  }
-
-  .result-image {
-    width: 100px;
-    border: solid;
-    border-radius: 12px;
-    border-width: 0px;
-    justify-self: center;
-  }
-
-  .details-grid {
-    display: grid;
-    grid-template-rows: 1fr;
-  }
-
-  .details {
-    display: none;
-  }
-
-  .details--display {
-    display: block;
-    color: white;
-  }
-
-  .more {
-    margin-top: 15px;
-    justify-self: center;
-    background-color: white;
-
-    border: solid;
-    border-radius: 12px;
-    border-width: 0px;
-    text-align: center;
-  }
 }
