--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,17 @@
-.grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+body {
   background: linear-gradient(135deg, black 25%, transparent 25%) -50px 0,
     linear-gradient(225deg, black 25%, transparent 25%) -50px 0,
     linear-gradient(315deg, black 25%, transparent 25%),
     linear-gradient(45deg, black 25%, transparent 25%);
   background-size: 2em 2em;
   background-color: #232323;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+
   font-family: "Volkhov", serif;
 }
 
@@ -91,10 +95,12 @@ a:hover {
   border-radius: 12px;
   border-color: slategray;
   text-align: center;
+  font-size: 12px;
 }
 
 .result-image {
   width: 100px;
+  height: 100px;
   border: solid;
   border-radius: 12px;
   border-width: 0px;
@@ -136,12 +142,4 @@ a:hover {
   border-radius: 12px;
   border-width: 0px;
   justify-self: center;
-}
-
-.load-more {
-  display: none;
-}
-
-.load-more--display {
-  display: block;
 }
