added modal example

--- a/styles.css
+++ b/styles.css
@@ -131,8 +131,73 @@ a:hover {
 .more {
   margin-top: 15px;
   justify-self: center;
-
+  color: white;
   text-align: center;
+}
+
+.more-button {
+  height: 100vh;
+  background-color: #000;
+  background-image: repeating-linear-gradient(
+      transparent,
+      transparent 50px,
+      rgba(0, 255, 255, 0.25) 50px,
+      rgba(0, 255, 255, 0.25) 100px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      rgba(0, 255, 255, 0.25),
+      rgba(0, 255, 255, 0.25) 50px,
+      transparent 50px,
+      transparent 100px
+    ),
+    repeating-linear-gradient(
+      135deg,
+      transparent,
+      transparent 4px,
+      rgba(255, 255, 255, 0.1) 4px,
+      rgba(255, 255, 255, 0.1) 8px
+    ),
+    repeating-linear-gradient(
+      45deg,
+      transparent,
+      transparent 4px,
+      rgba(255, 255, 255, 0.1) 4px,
+      rgba(255, 255, 255, 0.1) 8px
+    ),
+    repeating-linear-gradient(
+      transparent,
+      transparent 20px,
+      rgba(100, 250, 250, 0.2) 20px,
+      rgba(100, 250, 250, 0.2) 21px,
+      transparent 21px,
+      transparent 29px,
+      rgba(100, 250, 250, 0.2) 29px,
+      rgba(100, 250, 250, 0.2) 30px,
+      transparent 30px,
+      transparent 50px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      transparent,
+      transparent 20px,
+      rgba(100, 250, 250, 0.2) 20px,
+      rgba(100, 250, 250, 0.2) 21px,
+      transparent 21px,
+      transparent 29px,
+      rgba(100, 250, 250, 0.2) 29px,
+      rgba(100, 250, 250, 0.2) 30px,
+      transparent 30px,
+      transparent 50px
+    );
+  border: solid;
+  border-color: slategray;
+  border-width: 2px;
+  color: white;
+  margin-bottom: 5px;
+  border-radius: 12px;
+  width: 100px;
+  height: 20px;
 }
 
 .artist-image {
@@ -142,4 +207,25 @@ a:hover {
   border-radius: 12px;
   border-width: 0px;
   justify-self: center;
+}
+
+/* modal: */
+
+.backdrop {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9998;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  background: yellow;
 }
